--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,5 +5,7 @@
     <string name="menu_settings">Settings</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_base">BaseActivity</string>
+    <string name="rotate_btn">Play Rotation</string>
+    <string name="dummy_text">dummy</string>
 
 </resources>
