NEW: ICS styl pro spinner prensen na 2.2 a vyse
FIX: ActionBar vyuziva ImageButton

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,5 +8,7 @@
     <string name="rotate_btn">Play Rotation</string>
     <string name="dummy_text">dummy</string>
     <string name="title_activity_choose_exercise">ChooseExercise</string>
+    <string name="search_field_text">Search for&#8230;</string>
+    <string name="search_btn_hint">Toggle SearchBar</string>
 
 </resources>
