FIX: Opravena dedicnost, vsechny aktivity opet dedi z jednoho zdroje, migrace na ActionBarSherlock dokoncena pro vsechny soucasne activity, implementovano zakladni chovani Tabu
BUG: chybi fragmenty pro jednotlive taby a jejich chovani

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11,5 +11,8 @@
     <string name="search_field_text">Search for&#8230;</string>
     <string name="search_btn_hint">Toggle SearchBar</string>
     <string name="search_btn">Search</string>
+    <string name="feed_tab">Feed</string>
+    <string name="profile_tab">Profile</string>
+    <string name="calendar_tab">Calendar</string>
 
 </resources>
