NEW: drill List item s funkcnim pridavanim a odebiranim polozek

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -29,5 +29,6 @@
         <item >Medium</item>
         <item >Testing</item>
     </string-array>
+    <string name="remove_btn">Remove</string>
 
 </resources>
