NEW:  listview v listchooseactivity a jejich potomcich umoznuje vyhledavani

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -30,5 +30,6 @@
         <item >Testing</item>
     </string-array>
     <string name="remove_btn">Remove</string>
+    <string name="title_length_picker">Workout Time</string>
 
 </resources>
